<resources>
    <string name="app_name">WePAWS</string>

    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_search">Search</string>
    <string name="nav_menu_preference">Profile</string>

    <string name="home_menu_search_hint">Enter keywords to search</string>
    <string name="home_menu_clinic">Clinic</string>
    <string name="home_menu_search_vet">Search Clinic</string>
    <string name="home_menu_store">Store</string>
    <string name="home_menu_search_store">Search Store</string>
    <string name="home_menu_dining">Dining</string>
    <string name="home_menu_search_dining">Search Dining</string>
    <string name="home_menu_park">Park</string>
    <string name="home_menu_search_park">Search Park</string>

    <string-array name="home_menu_items">
        <item>@string/home_menu_clinic</item>
        <item>@string/home_menu_store</item>
        <item>@string/home_menu_hotel</item>
        <item>@string/home_menu_information</item>
    </string-array>
    <integer-array name="home_menu_item_images">
        <item>@drawable/baseline_local_hospital_24</item>
        <item>@drawable/baseline_store_24</item>
        <item>@drawable/dog_house</item>
        <item>@drawable/outline_info_24</item>
    </integer-array>

    <string name="information_dialog_reference_websites">Reference Websites</string>
    <string-array name="information_dialog_reference_websites_array">
        <item>AFCD Animal Management</item>
        <item>SPCA</item>
        <item>Mo City Property</item>
        <item>SCMP Animals</item>
    </string-array>
    <string-array name="information_dialog_reference_websites_url">
        <item>https://www.pets.gov.hk/english/index.html</item>
        <item>https://www.spca.org.hk/en/</item>
        <item>http://www.mocityproperty.com.hk/</item>
        <item>https://www.scmp.com/topics/animals</item>
    </string-array>

    <string name="profile_logged_in_as">Logged in as\u0020</string>
    <string name="profile_username">Username</string>
    <string name="profile_email_address">Email address</string>
    <string name="profile_password">Password</string>
    <string name="profile_login">Login</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_create_account">Create Account</string>
    <string name="profile_forgot_password">Forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_instruction">Enter the email address associated with your account</string>


    <string name="create_account">Create Account</string>

    <string name="preference_language">Language</string>
    <string name="preference_language_en" translatable="false">English</string>
    <string name="preference_language_zh" translatable="false">中文</string>
    <string name="preference_save">Save</string>

    <string name="search_component_select">Select</string>
    <string name="search_component_name" translatable="false">Name</string>
    <string name="search_component_name_hint">Enter name</string>
    <string name="search_component_overnight" translatable="false">Overnight</string>
    <string name="search_component_overnight_yes" translatable="false">Yes</string>
    <string name="search_component_overnight_no" translatable="false">No</string>
    <string name="search_component_animal" translatable="false">Animal</string>
    <string name="search_component_district" translatable="false">District</string>
    <string name="search_component_opening_hours" translatable="false">Opening Hours</string>
    <string name="search_component_specialist" translatable="false">Specialist</string>
    <string name="search_component_keyword">Keyword</string>
    <string name="search_component_keyword_hint">Enter keywords to search</string>
    <string name="search_component_search">Search</string>

    <string name="search_dialog_ok">Ok</string>
    <string name="search_dialog_cancel">Cancel</string>
    <string name="search_dialog_select_opening_hours">Select Opening Hours</string>
    <string name="search_dialog_select_from">From:</string>
    <string name="search_dialog_select_to">To:</string>

    <string name="result">Result</string>
    <string name="result_filter">Filter</string>
    <string name="result_previous">\u003C</string>
    <string name="result_next">\u003E</string>
    <string name="no_result">No results found</string>

    <string name="result_detail">Result Detail</string>
    <string name="result_detail_phone">Phone No.</string>
    <string name="result_detail_address">Address</string>
    <string name="result_detail_info"><u>Information</u></string>
    <string name="result_detail_review_summary">Review Summary</string>
    <string name="result_detail_view_all">View All</string>
    <string name="result_detail_write_review">Write Review</string>
    <string name="result_detail_good">Good</string>
    <string name="result_detail_mediocre">Mediocre</string>
    <string name="result_detail_bad">Bad</string>

    <string name="review_summary">Review Summary</string>
    <string name="review_summary_title">Showing reviews for\u0020</string>
    <string name="review_summary_previous">\u003C</string>
    <string name="review_summary_next">\u003E</string>

    <string name="write_review">Write Review</string>
    <string name="write_review_title">Write a review for\u0020</string>
    <string name="write_review_comment">Leave review:</string>
    <string name="write_review_submit">Submit</string>

    <string name="animal_type_dog">Dog</string>
    <string name="animal_type_cat">Cat</string>
    <string name="animal_type_rabbit">Rabbit</string>
    <string name="animal_type_rat">Rat</string>
    <string name="animal_type_fish">Fish</string>
    <string name="animal_type_bird">Bird</string>
    <string name="animal_type_amphibian">Amphibian</string>
    <string name="animal_type_reptiles">Reptiles</string>
    <string name="animal_type_insect">Insect</string>


    <string name="hk_district_Hong_Kong_Island">Hong Kong Island</string>
    <string name="hk_district_Central_and_Western">Central and Western</string>
    <string name="hk_district_Eastern">Eastern</string>
    <string name="hk_district_Southern">Southern</string>
    <string name="hk_district_Wan_Chai">Wan Chai</string>

    <string name="hk_district_Kowloon">Kowloon</string>
    <string name="hk_district_Sham_Shui_Po">Sham Shui Po</string>
    <string name="hk_district_Kowloon_City">Kowloon City</string>
    <string name="hk_district_Kwun_Tong">Kwun Tong</string>
    <string name="hk_district_Wong_Tai_Sin">Wong Tai Sin</string>
    <string name="hk_district_Yau_Tsim_Mong">Yau Tsim Mong</string>

    <string name="hk_district_New_Territories">New Territories</string>
    <string name="hk_district_Islands">Islands</string>
    <string name="hk_district_Kwai_Tsing">Kwai Tsing</string>
    <string name="hk_district_North">North</string>
    <string name="hk_district_Sai_Kung">Sai Kung</string>
    <string name="hk_district_Sha_Tin">Sha Tin</string>
    <string name="hk_district_Tai_Po">Tai Po</string>
    <string name="hk_district_Tsuen_Wan">Tsuen Wan</string>
    <string name="hk_district_Tuen_Mun">Tuen Mun</string>
    <string name="hk_district_Yuen_Long">Yuen Long</string>

    <string name="specialist_surgical">Surgical</string>
    <string name="specialist_medical">Medical</string>
    <string name="specialist_ophthalmology">Ophthalmology</string>
    <string name="specialist_anesthesia">Anesthesia</string>
    <string name="specialist_radiology">Radiology</string>
    <string name="specialist_orthopedics">Orthopedics</string>
    <string name="specialist_oncology">Oncology</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_component_name_display">Name</string>
    <string name="search_component_overnight_display">Overnight</string>
    <string name="search_component_overnight_yes_display">Yes</string>
    <string name="search_component_overnight_no_display">No</string>
    <string name="search_component_animal_display">Animal</string>
    <string name="search_component_district_display">District</string>
    <string name="search_component_opening_hours_display">Opening Hours</string>
    <string name="search_component_specialist_display">Specialist</string>
    <string name="result_detail_view">View</string>
    <string name="result_detail_reviews">reviews</string>
    <string name="write_review_write_review_by">Write Review By\u0020</string>
    <string name="preference_login_success">Login Account Success</string>
    <string name="preference_login_username_null">Username cannot be empty</string>
    <string name="preference_login_email_null">Email address cannot be empty</string>
    <string name="preference_login_password_null">Password cannot be empty</string>
    <string name="preference_login_fail_r0">Wrong Password</string>
    <string name="preference_login_fail_r1">Username does not exist</string>
    <string name="preference_login_fail_r2">Error Unknown</string>
    <string name="preference_create_profile_fail_r0">Username exists</string>
    <string name="preference_create_profile_fail_r1">Email already registered</string>
    <string name="preference_reset_success">Password reset email sent</string>
    <string name="preference_reset_back">Go Back</string>
    <string name="preference_reset_fail_r0">Email not registered in WePAWS</string>
    <string name="home_menu_hotel">Hotel</string>
    <string name="home_menu_information">Information</string>
    <string name="progressdialog_text">Loading...</string>
    <string name="share_title">WePAWS Share</string>

</resources>