<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <activity
        android:id="@+id/mainActivity"
        android:name="com.victoryam.wepaws.MainActivity"
        tools:layout="@layout/activity_main" />
    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.victoryam.wepaws.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/home">
        <action
            android:id="@+id/action_HomeFragment_to_SearchFragment"
            app:destination="@id/SearchFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_PreferenceFragment"
            app:destination="@id/PreferenceFragment" />
    </fragment>
    <fragment
        android:id="@+id/SearchFragment"
        android:name="com.victoryam.wepaws.SearchFragment"
        android:label="@string/nav_menu_search"
        tools:layout="@layout/search_by_category">
        <argument
            android:name="SearchFragmentArg"
            app:argType="integer"
            />
        <action
            android:id="@+id/action_SearchFragment_to_ResultFragment"
            app:destination="@id/ResultFragment" />
    </fragment>
    <fragment
        android:id="@+id/PreferenceFragment"
        android:name="com.victoryam.wepaws.PreferenceFragment"
        android:label="@string/nav_menu_preference"
        tools:layout="@layout/preference" />
    <fragment
        android:id="@+id/ResultFragment"
        android:name="com.victoryam.wepaws.ResultFragment"
        android:label="@string/result"
        tools:layout="@layout/result" />
</navigation>