<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:theme="@style/FontSize_Medium"
        android:text="Username here"/>

    <LinearLayout
        android:id="@+id/profile_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_username"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_username"/>

        <EditText
            android:id="@+id/profile_username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/profile_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_password"/>

        <EditText
            android:id="@+id/profile_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/profile_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Button_Tiny"
            android:text="@string/profile_login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <TextView
                android:id="@+id/profile_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/profile_create_account"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/FontSize_Small"
            android:text="@string/preference_language"
            />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/preference_language_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            />

        <Button
            android:id="@+id/preference_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preference_save"
            android:backgroundTint="@color/orange_dark"
            android:theme="@style/Preference.FontSize"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>