<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/search_dialog_1_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:theme="@style/FontSize_Medium"
        android:text="@string/search_dialog_select_opening_hours"
        />

    <TextView
        android:id="@+id/search_dialog_1_title_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:theme="@style/FontSize_Small"
        android:text="@string/search_dialog_select_from"
        />

    <TimePicker
        android:id="@+id/search_dialog_1_timepicker_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:timePickerMode="spinner"
        android:theme="@style/FontSize_Small"
        />

    <TextView
        android:id="@+id/search_dialog_1_title_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:theme="@style/FontSize_Small"
        android:text="@string/search_dialog_select_to"
        />

    <TimePicker
        android:id="@+id/search_dialog_1_timepicker_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:timePickerMode="spinner"
        android:theme="@style/FontSize_Small"
        />

</LinearLayout>