<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".CreateAccountFragment">

    <LinearLayout
        android:id="@+id/create_account_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/create_account_username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/FontSize_Tiny"
            android:text="@string/profile_username"/>

        <EditText
            android:id="@+id/create_account_username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/create_account_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/FontSize_Tiny"
            android:text="@string/profile_password"/>

        <EditText
            android:id="@+id/create_account_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/create_account_create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Button_Tiny"
            android:text="@string/create_account"/>

        <TextView
            android:id="@+id/create_account_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:theme="@style/FontSize_Tiny"
            android:text=""/>

    </LinearLayout>

</LinearLayout>